hphp/hack/test/typecheck/reactive/at_most_rx_as_func3.php.like_types.exp
File "at_most_rx_as_func3.php", line 5, characters 10-13:
Reactive functions can only call other reactive functions. (Typing[4200])
File "at_most_rx_as_func3.php", line 4, characters 32-48:
This function is non-reactive.
